# json2cpp

./: CMakeLists.txt  LICENSE  README.md  cmake-format.py  conanfile.py
.github/workflows/: ci.yml
ci/conan2/profiles/: gcc-11  llvm-15.0.2  macos-11-gcc-11  macos-11-llvm-15.0.2  macos-11-llvm-16.0.0  ubuntu-22.04-gcc-11  ubuntu-22.04-llvm-15.0.2  ubuntu-22.04-llvm-16.0.0  windows-2022-llvm-15.0.2  windows-2022-llvm-16.0.0  windows-2022-msvc
cmake/: ccache.cmake  lib_fuzzer.cmake  modern_project_structure.cmake  static_analysis.cmake  warnings.cmake
fuzz_test/: CMakeLists.txt
scripts/: format-all.sh
src/: CMakeLists.txt
src/exe/: CMakeLists.txt
src/exe/src/: json2cpp.cpp
src/lib/: CMakeLists.txt
src/lib/include/json2cpp/: json2cpp.hpp
test/: CMakeLists.txt
test_package/: CMakeLists.txt
test_package/src/: example.cpp
